2013-7-20:
  * Fixed eigen() bug.

2013-7-18:
  * Fixed isSymmetric bug.

pbdDMAT 0.2-2 (2013-7-8) --------------------------------------------------

2013-7-2:
  * Several qr()/qr.Q() bugs fixed.

2013-5-30:
  * Added rowMin(), colMin(), rowMax(), and colMax() methods.
  * Added as.block(), as.rowblock(), as.colblock(), as.rowcyclic(), 
    as.colcyclic(), and as.blockcyclic() redistribution methods.

2013-5-24:
  * Added experimental ddvector class.

pbdDMAT 0.2-1 (2013-3-25) --------------------------------------------------

2013-3-20:
  * Added eigen() method.
  * Attributes bugfix when subsetting.

pbdDMAT 0.2-0 (2013-3-12) --------------------------------------------------

2013-3-12:
  * Final touches for CRAN.

2012-02-26:
  * Added method for 'cor' (pearson only).
  * Significantly expanded method "ddmatrix".

2012-02-15:
  * Completely redid all the internals to accommodate corresponding pbdBASE changes.

2012-01-04:
  * Added norm(), rcond(), and kappa() methods.
  * Added new diag() method for constructing diagonal ddmatrices.

2012-12-17:
  * Added copyright to vignette.

pbdDMAT 0.1-1 (2012-12-1) ----------------------------------------------------

2012-11-29:
  * Added simple var() and sd() wrappers for ddmatrix.
  * Changed dispatch of qr.* functions to avoid WARNING in R CMD check.

2012-11-21:
  * Fixed QR methods.

2012-10-30:
  * Fixed whining about qr-function generics.
  * Added some documentation.

2012-10-24:
  * Added wrappers for lm.fit() and qr functions.

======================= Log Before Release =====================================
2012-10-02:
  * Prepare for the first submission.

2012-08-21:
  * Delete configure.ac and use RmpiSPMD:::LdFlags() and others.
  * Rename to 'pbdDMAT'.

2012-08-13:
  * Link with RmpiSLAP.
  * Add guide, man pages, installation, ...

2012-07-xx:
  * Add BLACS, PBLAS, ScaLAPACK.