@@ -66,6 +66,7 @@ export(
   diag,
   ddmatrix, 
   ddmatrix.local, 
+  Hilbert,
   companion,
   # Misc
   as.matrix, 
